--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@splinetool/runtime": "^1.10.76",
     "express": "^5.1.0",
     "serialport": "^13.0.0",
     "socket.io": "^4.8.1"
