--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@splinetool/runtime": "^1.10.76",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "openai": "^6.2.0",
     "serialport": "^13.0.0",
